--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
       <section>
         <div class="heroSection">
           <div class="heroContent">
-            <h1>distinct <br>coffee aroma</h1>
+            <h1>distinct <br />coffee aroma</h1>
 
             <p>
               The coffee is brewed by first roasting the green coffee beans over
-              hot coals in a brazier. given an opportunity to sample.
+              hot <br />
+              coals in a brazier. given an opportunity to sample.
             </p>
 
             <div class="btn_btn">
@@ -80,15 +81,360 @@
             </div>
           </div>
 
-         <div class="heroImgCont">
-            <img src="./assets/coffee.png" alt="coffee">
+          <div class="heroImgCont">
+            <img src="./assets/coffee.png" alt="coffee" />
 
             <div class="video">
-                <a href="https://youtu.be/4xe72U7mXNg"><i class="fa fa-play" aria-hidden="true"></i></a>
-                <span>play video</span>
+              <a href="https://youtu.be/4xe72U7mXNg"
+                ><i class="fa fa-play" aria-hidden="true"></i
+              ></a>
+              <span>play video</span>
             </div>
-         </div>
+          </div>
+        </div>
+      </section>
 
+      <!-- section two -->
+      <section class="secTwo">
+        <div class="timeline">
+          <div class="timeCard">
+            <span>1992</span>
+            <h2>how we started</h2>
+            <p>
+              Curabitur semper erat a lacusey <br />
+              sedn consequat, sit amet quamey.
+            </p>
+          </div>
+          <div class="timeCard">
+            <span>2002</span>
+            <h2>coffee beans</h2>
+            <p>
+              Curabitur semper erat a lacusey <br />
+              sedn consequat, sit amet quamey.
+            </p>
+          </div>
+          <div class="timeCard">
+            <span>2014</span>
+            <h2>family work</h2>
+            <p>
+              Curabitur semper erat a lacusey <br />
+              sedn consequat, sit amet quamey.
+            </p>
+          </div>
+          <div class="timeCard">
+            <span>2019</span>
+            <h2>bangladeshy grades</h2>
+            <p>
+              Curabitur semper erat a lacusey <br />
+              sedn consequat, sit amet quamey.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- section three -->
+      <section class="secThree">
+        <div class="coffeeImages">
+          <div class="barista">
+            <img src="./assets/barista.png" alt="" />
+          </div>
+          <div class="coffeeCup">
+            <img src="./assets/cup of coffee.png" alt="" />
+          </div>
+        </div>
+
+        <div class="aboutUs">
+          <span>About Us</span>
+
+          <h2>ONE OF THE BEST COFFEE HOUSE IN YOUR HOME TOWN</h2>
+
+          <p>
+            Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl
+            suscipit ligula volutpat, a feugiat urna maximus. Cras massa
+            nibhtincidunt. <br />
+            <br />
+            Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam
+            quis quam venenatis fringilla. Morbi vestibulum id tellus mmodo
+            mattis. Aliquam erat volutpat. Aenean accumsan id mi nec semper.
+            Lorem ipsum.
+          </p>
+        </div>
+      </section>
+
+      <!-- section four -->
+      <section id="secFour">
+        <div class="cafenaNav">
+          <div class="subHeading">
+            <span>special menu</span>
+            <h2>cafena popular menu</h2>
+          </div>
+        </div>
+
+        <div class="popularNavBar">
+          <button><span>all</span></button>
+          <button>chocolate</button>
+          <button>coffee</button>
+          <button>sandwiches</button>
+          <button>sweets</button>
+          <button>black tea</button>
+          <button>green tea</button>
+        </div>
+
+        <div class="menuPosts">
+          <!-- Card One -->
+          <div class="menuCard">
+            <img src="./assets/americano.jpeg" alt="americano" />
+            <div class="menuInfo">
+              <h3>americano coffee</h3>
+              <p><b>price</b> - $325.00 / $̶3̶4̶8̶</p>
+              <div class="menuIcons">
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+          <!-- Card Two -->
+          <div class="menuCard">
+            <img src="./assets/latte.jpeg" alt="americano" />
+            <div class="menuInfo">
+              <h3>caffé latte</h3>
+              <p><b>price</b> - $325.00 / $̶3̶4̶8̶</p>
+              <div class="menuIcons">
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+          <!-- Card Three -->
+          <div class="menuCard">
+            <img src="./assets/espresso.jpeg" alt="americano" />
+            <div class="menuInfo">
+              <h3>espresso ristretto</h3>
+              <p><b>price</b> - $325.00 / $̶3̶4̶8̶</p>
+              <div class="menuIcons">
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+          <!-- Card Four -->
+          <div class="menuCard">
+            <img src="./assets/lungo.jpeg" alt="americano" />
+            <div class="menuInfo">
+              <h3>espresso lungo</h3>
+              <p><b>price</b> - $325.00 / $̶3̶4̶8̶</p>
+              <div class="menuIcons">
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+          <!-- Card Five -->
+          <div class="menuCard">
+            <img src="./assets/macchiato.jpeg" alt="americano" />
+            <div class="menuInfo">
+              <h3>latte machiatto</h3>
+              <p><b>price</b> - $325.00 / $̶3̶4̶8̶</p>
+              <div class="menuIcons">
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+          <!-- Card Six -->
+          <div class="menuCard">
+            <img src="./assets/cafe.jpeg" alt="americano" />
+            <div class="menuInfo">
+              <h3>café au lait</h3>
+              <p><b>price</b> - $325.00 / $̶3̶4̶8̶</p>
+              <div class="menuIcons">
+                <i class="fa fa-shopping-basket" aria-hidden="true"></i>
+                <i class="fa fa-heart-o" aria-hidden="true"></i>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- section five -->
+      <section id="secFive">
+        <div class="bio">
+          <span>testimonials</span>
+          <h2>our customer review</h2>
+          <i class="fa fa-quote-right" aria-hidden="true"></i>
+          <p>
+            Very good quality of food and service. Vast menu with child friendly
+            items as well as <br />
+            local seafood and even entrees for those who dont like seafood.
+            Great place! Thanks. <br />
+            We absolutely love everything there!
+          </p>
+          <div class="left">
+            <a href="#"
+              ><i class="fa fa-long-arrow-left" aria-hidden="true"></i
+            ></a>
+          </div>
+          <div class="right">
+            <a href="#"
+              ><i class="fa fa-long-arrow-right" aria-hidden="true"></i
+            ></a>
+          </div>
+        </div>
+        <div class="creatorInfo">
+          <img src="./assets/model.png" alt="" />
+          <p>rasalina de williamson</p>
+          <span>founder & co</span>
+        </div>
+      </section>
+
+      <!-- section six -->
+      <section id="secSix">
+        <div class="title">
+        <span>top grade</span>
+        <h2>world top grade</h2>
+        </div>
+
+        <div class="theBeans">
+          <!-- first bean  -->
+          <div class="coffeeTypes">
+            <img src="./assets/coffee beans.jpeg" alt="americano" />
+            <h3>americano grade</h3>
+            <p>
+              Curabitur semper erat a lacusey 
+              consequat, sit amet quam
+            </p>
+            <div class="number">
+              <p>01</p>
+            </div>
+          </div>
+          <!-- second bean -->
+          <div class="coffeeTypes">
+            <img src="./assets/beans.jpeg" alt="beans" />
+            <h3>arebica green</h3>
+            <p>
+              Curabitur semper erat a lacusey 
+              consequat, sit amet quam
+            </p>
+            <div class="number">
+              <p>02</p>
+            </div>
+          </div>
+          <!-- third bean -->
+          <div class="coffeeTypes">
+            <img src="./assets/yin yang beans.jpeg" alt="yin yang" />
+            <h3>mixed rosted</h3>
+            <p>
+              Curabitur semper erat a lacusey
+              consequat, sit amet quam
+            </p>
+            <div class="number">
+              <p>03</p>
+            </div>
+          </div>
+          <!-- fourth bean -->
+          <div class="coffeeTypes">
+            <img src="./assets/roasted beans.jpeg" alt="roasted" />
+            <h3>robasta rosted</h3>
+            <p>
+              Curabitur semper erat a lacusey
+              consequat, sit amet quam
+            </p>
+            <div class="number">
+              <p>04</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- section seven -->
+      <section id="secSeven">
+        <div class="blogHeading">
+          <span>news & blog</span>
+          <div class="blogTitle">
+          <h2>LATEST NEWS & BLOG</h2>
+          <a href="#">learn more</a>
+          </div>
+        </div>
+
+        <div class="blogCards">
+          <!-- card 1 -->
+          <div class="blogInfo">
+            <img src="./assets/blog img1.jpeg" alt="">
+            <p>by:<span>rasalina</span></p>
+            <a href="#">Questions Business Must Be Able To Answer</a>
+
+            <div class="readMore">
+              <a href="#">read more  <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+              <i class="fa fa-share-alt" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <!-- card 2 -->
+          <div class="blogInfo">
+            <img src="./assets/blog img2.jpeg" alt="">
+            <p>by: <span>rasalina</span></p>
+            <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
+
+            <div class="readMore">
+              <a href="#">read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+              <i class="fa fa-share-alt" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <!-- card 3 -->
+          <div class="blogInfo">
+            <img src="./assets/blog img3.jpeg" alt="">
+            <p>by: <span>rasalina</span></p>
+            <a href="#">Ideal Cocktails From Our Barmen For Pefect Mood</a>
+
+            <div class="readMore">
+              <a href="#">read more <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+              <i class="fa fa-share-alt" aria-hidden="true"></i>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- footer -->
+      <section id="footer">
+        <div class="contactDetails">
+          <p>📱 phone : <span>+88019 339 702 520</span></p>
+          <p>📍 address : <span>30 North West New</span></p>
+          <input type="email">
+          <a href="#">subscribe <i class="fa fa-paper-plane-o" aria-hidden="true"></i></a>
+        </div>
+
+        <div class="otherInfo">
+          <div class="endNotes">
+            <img src="./assets/coffee logo2.png" alt="">
+          <p>Donec et nibh maximus, congue est eu, mattis nunc. Praesent ut quam quis quam venenatis fringilla. Morbi vestibulum</p>
+          </div>
+
+          <div class="footerIcons">
+            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+          </div>
+
+          <hr>
+
+          <div class="navItems">
+            <a href="#">home</a>
+            <a href="#">about</a>
+            <a href="#">menu</a>
+            <a href="#">reservation</a>
+            <a href="#">pages</a>
+            <a href="#">shop</a>
+            <a href="#">contact</a>
+          </div>
         </div>
       </section>
     </main>
